Add week7-8 16_INTERACTIVE STEP1-1

--- a/week7-8/02_quest/16_INTERACTIVE/01_todo.html
+++ b/week7-8/02_quest/16_INTERACTIVE/01_todo.html
@@ -17,7 +17,17 @@
     </form>
     <ul id="todo-list">
       <!-- タスクはここに追加される。下記のようなタグを追加する -->
-      <!-- <li class="todo-item"><input type="checkbox"><span>TODO</span><button class="delete-button">削除</button></li> -->
+      <!-- 
+        <li class="todo-item">
+          <input type="checkbox">
+          <span>
+            TODO
+          </span>
+          <button class="delete-button">
+            削除
+          </button>
+        </li>
+      -->
     </ul>
   </div>
   <script src="01_todo.js"></script>
